src/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds information about incentive display pages</description>
    <fields>
        <fullName>Apttus_Config2__AllowedDecimals__c</fullName>
        <description>Sets displayed decimals for decimal numbers displayed in the incentive manager.</description>
        <inlineHelpText>Sets displayed decimals for decimal numbers displayed in the incentive manager.</inlineHelpText>
        <label>Allowed Decimals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitSectionFieldset__c</fullName>
        <label>Benefit Section Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaValueTypeOptions__c</fullName>
        <description>List of options for the Value Type field in criteria, separated by a semicolon;.</description>
        <inlineHelpText>List of options for the Value Type field in criteria, separated by a semicolon.</inlineHelpText>
        <label>Criteria Value Type Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultFieldValues__c</fullName>
        <description>List of fields and their corresponding default values.  List should contain field name, equal sign then value with new line as the delimiter.</description>
        <inlineHelpText>List of fields and their corresponding default values.  List should contain field name, equal sign then value with new line as the delimiter.</inlineHelpText>
        <label>Default Field Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCloneButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the clone button at the bottom of the page when checked.</description>
        <label>Hide Clone Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InformationAdditionalSectionFieldset__c</fullName>
        <description>Overrides the fields set in the information additional data section to use a custom fieldset.</description>
        <label>Information Additional Section Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InformationSectionFieldset__c</fullName>
        <description>Overrides the fields sets in the application to use a custom fieldset.</description>
        <label>Information Section Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NavigationPages__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>Will provide the pages to be displayed and sequence of display
For e.g. a string like: SCBDLP

S: Scope
C: Criteria
B: Benefit
D: Deduction
L: Limit
P: Coupons</description>
        <inlineHelpText>Will provide the pages to be displayed and sequence of display
For e.g. a string like: SCBDLP

S: Scope
C: Criteria
B: Benefit
D: Deduction
L: Limit
P: Coupons</inlineHelpText>
        <label>Navigation Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RateTabelFieldset__c</fullName>
        <description>Overrides the fields sets in the application to use a custom fieldset in the rate table.</description>
        <label>Rate Tabel Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RateTableFieldset__c</fullName>
        <description>Overrides the fields sets in the application to use a custom fieldset in the rate table.</description>
        <label>Rate Table Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowExclusionCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether exclusion criteria should be displayed</description>
        <inlineHelpText>Indicates whether exclusion criteria should be displayed</inlineHelpText>
        <label>Show Exclusion Criteria?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubtitleText__c</fullName>
        <description>Controles the text displayed to the left of the Incentive Name on the Incentive Manager Page.</description>
        <inlineHelpText>Controles the text displayed to the left of the Incentive Name on the Incentive Manager Page.</inlineHelpText>
        <label>Subtitle Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <defaultValue>&quot;Rebate&quot;</defaultValue>
        <description>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</description>
        <inlineHelpText>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</inlineHelpText>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Incentive Custom Display Setting</label>
</CustomObject>